<resources>
    <string name="app_name">Estimator Guys</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="LandingText2">Try our FREE service to save</string>
    <string name="LandingText3">40%-70%</string>
    <string name="LandingText4">on ALL your service needs</string>
    <string name="savingtext">CLICK HERE FOR MY SAVINGS</string>
    <string name="signin">Already have an account? Sign In.</string>
    <string name="btn_signin">Sign In</string>
    <string name="back">Back</string>
    <string name="forgot">Forgot password</string>
    <string name="btn_send">Send</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="vin">V.I.N..</string>
    <string name="note">No Estimate or Quote No Problem...
\nSubmit your vehicles Service Repair Needs here...</string>
    <string name="scan">Scan Your Quote or Invoice</string>
    <string name="vehicle">Please enter your vehicle details</string>
    <string name="connection_time_out">Connection time out</string>
    <string name="pick_image_intent_text">Select Image :</string>
    <string name="LandingText1">TIRED of OVERPAYING on your auto service work</string>
    <string name="remember">Save Password</string>
    <string name="marketing_consent">Marketing Consent</string>
    <string name="yeartitle">Please select year</string>
    <string name="btn_submit">Submit</string>
    <string name="thanks">Success!</string>
    <string name="thanksdetails">Your submission has been received \n thank you. \n Please allow 1-2 business days for \n our team to respond.</string>
    <string name="btn_done">Done</string>
    <string name="yearpopup">Please select year</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_aboutus">About Us</string>
    <string name="nav_support">Support</string>
    <string name="nav_term"><![CDATA[Term & Condition]]></string>
    <string name="nav_privacy">Privacy</string>
    <string name="nav_terms">Logout</string>
    <string name="btn_update">Update</string>
    <string name="count">photos selected</string>
</resources>
