<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/rootview">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/verticaltechnician_full"
        android:scaleType="fitXY"/>

    <RelativeLayout
        android:id="@+id/landingcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/landingoffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LandingText1"
                android:textSize="15sp"
                android:textColor="#FFFF"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LandingText2"
                android:textSize="20sp"
                android:textColor="#FFFF"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LandingText3"
                android:textSize="20sp"
                android:textColor="#FFFF"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LandingText4"
                android:textSize="20sp"
                android:textColor="#FFFF"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/landingoffer"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:src="@drawable/loginlogo"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savingtext"
                android:textSize="15sp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner"
                android:includeFontPadding="false"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/tv_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textColor="#FFF"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </FrameLayout>

</RelativeLayout>