<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:id="@+id/rootview"
    android:layout_height="match_parent"
    android:background="#306B96"
    tools:context="com.estimatorguys.app.android.fragments.fragmentsignin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/outer"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/lay_logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:visibility="visible"
                android:gravity="center">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_logoicon"
                        android:layout_width="180dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/loginlogo"/>

                    <TextView
                        android:id="@+id/homeheading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vehicle"
                        android:gravity="center"
                        android:textColor="#FFF"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@+id/img_logoicon"
                        android:typeface="sans"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_logindetails"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/lay_logo"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center">


                <TextView
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/year"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:textColorHint="#CECBCB"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/rounded_corner"/>

                <EditText
                    android:id="@+id/make"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/make"
                    android:textColorHint="#CECBCB"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:singleLine="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner"/>

                <EditText
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/model"
                    android:textColorHint="#CECBCB"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:singleLine="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner"/>

                <EditText
                    android:id="@+id/vin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vin"
                    android:textColorHint="#CECBCB"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:paddingRight="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner"/>

                <EditText
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/note"
                    android:textColorHint="#CECBCB"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:gravity="top"
                    android:paddingRight="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:layout_below="@+id/layout_logindetails"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/imagecount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:layout_below="@+id/tv_scan"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@+id/tv_scan"
                android:paddingTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/picture"
                        android:layout_width="100dp"
                        android:background="@drawable/scan"
                        android:scaleType="fitXY"
                        android:layout_height="100dp"/>

                    <ImageView
                        android:id="@+id/cross"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:visibility="gone"
                        android:background="@drawable/cross"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_submit"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_submit"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_corner"
                    android:includeFontPadding="false"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </FrameLayout>

</RelativeLayout>