<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:id="@+id/rootview"
    android:layout_height="match_parent"
    android:background="#306B96"
    tools:context="com.estimatorguys.app.android.fragments.fragmentsignin">

    <RelativeLayout
        android:id="@+id/outer"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent"
        android:clickable="true">

        <include layout="@layout/dialog_background"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_logindetails"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:textColorHint="#CECBCB"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/rounded_corner"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:textColorHint="#CECBCB"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/marketing_consent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_logindetails"
            android:text="@string/marketing_consent"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:visibility="gone"
            android:buttonTint="@color/white"
            android:textColor="#FFF"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/rememberme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/marketing_consent"
            android:text="@string/remember"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:buttonTint="@color/white"
            android:textColor="#FFF"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_signin"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center"
                android:background="@drawable/rounded_corner"
                android:includeFontPadding="false"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/tv_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:textColor="#FFF"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>